# python-exbetapi

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  bitbucket-pipelines.yml  cli.py  pyproject.toml  pytest.ini  tox.ini
.changes/: 0.1.0.json  2.0.0.json  2.1.0.json  2.1.1.json
.changes/next-release/: major-20200526120300.json  minor-20200930131759.json  patch-20200625123522.json  patch-20201208082520.json  patch-20201208082545.json  patch-20201208082613.json  patch-20201208084743.json
.github/workflows/: tox.yaml
docs/: conf.py  exbetapi.api.rst  exbetapi.cli.rst  exbetapi.exceptions.rst  exbetapi.rst  index.rst  modules.rst
exbetapi/: __init__.py  api.py  cli.py
tests/: test_exbetapi.py
